@@ -2,12 +2,18 @@ m4_pattern_forbid([^URBI_])dnl
 
 AC_PREREQ([2.60])
 
-
-# URBI_DIRS(DEFAULT-URBI-ENV)
-# ---------------------------
+# _URBI_DIRS(KIND, DEFAULT-URBI-ENV)
+# ----------------------------------
+# KIND should be "core" or "kernel".
+# DEFAULT-URBI-ENV should probably be something like "aibo", "webots" etc.
+#
 # Define the directory variables we are about to use.
-AC_DEFUN([URBI_DIRS],
-[# We need to know the host (the type of architecture it will run on),
+m4_define([_URBI_DIRS],
+[m4_bmatch([$1],
+	   [core\|kernel], [],
+	   [m4_fatal([incorrect kind: $1])])
+
+# We need to know the host (the type of architecture it will run on),
 # the environment (the runtime, the event loop: posix, webots, aibo).
 
 # URBI_HOST
@@ -31,9 +37,8 @@ AC_ARG_ENABLE([env],
 			       aibo, webots. posix [posix]])])
 AC_MSG_CHECKING([for URBI environment type])
 case $enable_env in
-			'') URBI_ENV=$1;;
-  remote|posix|webots|aibo) URBI_ENV=$enable_env;;
-		  *) AC_MSG_ERROR([invalid urbi env: $enable_env]);;
+ '') URBI_ENV=$2;;
+  *) URBI_ENV=$enable_env;;
 esac
 AC_MSG_RESULT([$URBI_ENV])
 AC_SUBST([URBI_ENV])
@@ -46,7 +51,7 @@ AC_SUBST([branddir], ['$(prefix)/$(PACKAGE_BRAND)'])
 # includedir and libdir under $prefix.
 
 # /usr/local/gostai/core/$host
-AC_SUBST([hostdir], ['$(brandir)/core/$(URBI_HOST)'])
+AC_SUBST([hostdir], ['$(branddir)/$1/$(URBI_HOST)'])
 
 # /usr/local/gostai/core/$host/$env.
 # Could have been named sdklibdir too.
@@ -57,6 +62,13 @@ AC_SUBST([sdkincludedir],  ['$(branddir)/include'])
 CPPFLAGS="$CPPFLAGS -I$sdkincludedir"
 LDFLAGS="$LDFLAGS -L$envdir"
 ])
+
+# To be used by liburbi and sdks.
+AC_DEFUN([URBI_DIRS],         [_URBI_DIRS([core],   [$1])])
+# To be used by core developpers for the kernels.
+AC_DEFUN([URBI_KERNEL_DIRS],  [_URBI_DIRS([kernel], [$1])])
+
+
 
 ## Local Variables:
 ## mode: autoconf
